# old-money

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
app/: Cargo.toml
app/src/: constants.rs  controllers.rs  docs.rs  errors.rs  extractors.rs  handlers.rs  lib.rs  repositories.rs  routes.rs  services.rs  utils.rs
app/src/constants/: environment_constants.rs  time_constants.rs
app/src/controllers/: auth_controller.rs  budget_config_controllers.rs  budget_configs_controller.rs  budgets_controller.rs  categories_controller.rs  categories_controllers.rs  global_controller.rs  transactions_controller.rs  transactions_controllers.rs  users_controller.rs  wallets_controller.rs
app/src/dto/: request.rs  response.rs
app/src/dto/request/: auth_dto.rs  budget_configs_dto.rs  budgets_dto.rs  categories_dto.rs  refresh_tokens_dto.rs  roles_dto.rs  transactions_dto.rs  user_roles_dto.rs  users_dto.rs  wallets_dto.rs
app/src/dto/request/auth_dto/: create_user_request.rs  login_user_request.rs  refresh_token_request.rs  register_user_request.rs
app/src/dto/request/budget_configs_dto/: create_budget_config_request.rs  update_budget_config_request.rs
app/src/dto/request/budgets_dto/: create_budget_request.rs  update_budget_request.rs
app/src/dto/request/categories_dto/: create_category_request.rs  get_all_categories_params.rs  update_category_request.rs
app/src/dto/request/refresh_tokens_dto/: create_refresh_token_request.rs  find_refresh_token_by_pk_request.rs  (+1 more)
app/src/dto/response/: auth_dto.rs  budget_configs_dto.rs  budgets_dto.rs  transactions_dto.rs  users_dto.rs  wallets_dto.rs
app/src/entities/: budget_configs.rs  budgets.rs  categories.rs  mod.rs  prelude.rs  refresh_tokens.rs  roles.rs  sea_orm_active_enums.rs  transactions.rs  user_roles.rs  users.rs  wallets.rs
app/src/enums/: roles.rs
app/src/extractors/: json.rs  user.rs
app/src/handlers/: auth_handlers.rs  users_handlers.rs
app/src/repositories/: budget_configs_repository.rs  budgets_repository.rs  categories_repository.rs  refresh_tokens_repository.rs  transactions_repository.rs  user_roles_repository.rs  users_repository.rs  wallets_repository.rs
app/src/routes/: auth_route.rs  auth_routes.rs  budget_config_route.rs  budget_config_routes.rs  budget_configs_route.rs  budgets_route.rs  budgets_routes.rs  categories_route.rs  categories_routes.rs  roles_route.rs  roles_routes.rs  transactions_route.rs  transactions_routes.rs  user_roles_route.rs  user_roles_routes.rs  users_route.rs  users_routes.rs  wallets_route.rs  wallets_routes.rs
app/src/services/: auth_service.rs  budget_configs_service.rs  budgets_service.rs  categories_service.rs  refresh_tokens_service.rs  roles_service.rs  transactions_service.rs  user_roles_service.rs  users_service.rs  wallets_service.rs
app/src/utils/: jwt_utils.rs  validation.rs
(+68 files in other folders)
