[package]
name = "old-money"
version = "1.0.0"
edition = "2024"
authors = ["Levi Indrajaya Sutantio <alevindrajaya@gmail.com>"]
description = "Money Management Mobile Application APIs"
license = "MIT"
repository = "https://github.com/leviis10/old-money"
readme = "README.md"

[dependencies]
axum = "0.8.4"
sea-orm = "1.1.12"
tokio = { version = "1.45.1", features = ["full"] }
utoipa = "5.4.0"
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3.41", features = ["serde"] }
derive_builder = "0.20.2"
tower-http = {version =  "0.6.6", features = ["trace", "compression-gzip", "request-id", "timeout", "util"] }
tracing-subscriber = "0.3.19"
tower = "0.5.2"
