[package]
name = "app"
version = "1.0.0"
edition = "2024"
authors = ["Levi Indrajaya Sutantio <alevindrajaya@gmail.com>"]
description = "Money Management Mobile Application APIs"
license = "MIT"
repository = "https://github.com/leviis10/old-money"
readme = "../README.md"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
utoipa = { version = "5.4.0", features = ["time"] }
sea-orm = {version = "1.1.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print"] }
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3.41", features = ["serde-human-readable"] }
tower-http = {version =  "0.6.6", features = ["trace", "compression-full", "decompression-full", "request-id", "timeout", "util"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower = "0.5.2"
tracing = "0.1.41"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
uuid = { version = "1.17.0", features = ["v7"] }
sha2 = "0.10.9"
hex = "0.4.3"
validator = { version = "0.20.0", features = ["derive"] }
utoipa-swagger-ui = { version =  "9.0.2", features = ["axum"] }
rust_decimal = "1.37.2"
lazy_static = "1.5.0"
